Fix so that floated elements do not overflow past the comment borders

--- a/resources/CommentStreams.css
+++ b/resources/CommentStreams.css
@@ -14,6 +14,7 @@
 
 .cs-comment {
 	position: relative;
+	overflow: hidden;
 }
 
 .cs-reply-comment {
